--- a/views/center/monthlyProgress/pdf.ejs
+++ b/views/center/monthlyProgress/pdf.ejs
@@ -9,8 +9,14 @@
   <style>
     .flex-container {
       display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 
-      justify-content: center
+    .flex-container h5 {
+      padding: 0;
+      margin: 0;
     }
 
     .table,
@@ -60,7 +66,7 @@
         <div>
           <img src="/images/dae.jpg" width="100" alt="dae">
         </div>
-        <div>
+        <div class="flex-container">
           <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
           <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
           <h5>হর্টিকালচার উইং</h5>
