--- a/views/center/rajossho/pdf.ejs
+++ b/views/center/rajossho/pdf.ejs
@@ -1,115 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>মাসিক রাজস্ব অর্থ প্রাপ্তির হিসাব</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>মাসিক রাজস্ব অর্থ প্রাপ্তির হিসাব</title>
 
-    <style>
-        .flex-container {
-            display: flex;
+  <style>
+    .flex-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 
-            justify-content: center
-        }
-        .table, td, th {
-            border: 1px solid black;
-        }
-        .table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        .center {
-            text-align: center;
-        }
-        .inline-block-child {
-            display: inline-block;
-        }
-    </style>
+    .flex-container h5 {
+      padding: 0;
+      margin: 0;
+    }
+
+    .table,
+    td,
+    th {
+      border: 1px solid black;
+    }
+
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .center {
+      text-align: center;
+    }
+
+    .inline-block-child {
+      display: inline-block;
+    }
+  </style>
 </head>
+
 <body>
 
-<div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
+  <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
-        <h1>মাসিক রাজস্ব অর্থ প্রাপ্তির হিসাব</h1>
-        <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
-        <%if (records.length >0){ %>
-            <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
-            <thead>
-            <tr>
-                <th>অর্থনৈতিক কোড নং</th>
-                <th>উপ-খাতের নাম</th>
-                <th>জুলাই</th>
-                    <th>আগস্ট</th>
-                    <th>সেপ্টে</th>
-                    <th>অক্টো</th>
-                    <th>নভে</th>
-                    <th>ডিসে</th>
-                    <th>জানু</th>
-                    <th>ফেব্রু</th>
-                    <th>মার্চ</th>
-                    <th>এপ্রিল</th>
-                    <th>মে</th>
-                    <th>জুন</th>
-                <th>সর্বমোট</th>
-        
-            </tr>
-            </thead>
-            <tbody>
-                <% records.forEach(function(row){ %>
-                    <tr>
-                        <td><%= row.code %></td>
-                        <td><%= row.upokhat %></td>
-                        <td><%= row.july1 %></td>
-                        <td><%= row.august1 %></td>
-                        <td><%= row.sept1 %></td>
-                        <td><%= row.oct1 %></td>
-                        <td><%= row.nov1 %></td>
-                        <td><%= row.dec1 %></td>
-                        <td><%= row.jan2 %></td>
-                        <td><%= row.feb2 %></td>
-                        <td><%= row.march2 %></td>
-                        <td><%= row.apr2 %></td>
-                        <td><%= row.may2 %></td>
-                        <td><%= row.june2 %></td>
-                        <td><%= row.total %></td>
-                        
-                       
-                    </tr>
-                <% }) %>
-            </tbody>
-        </table>
-        <% }else{ %>
-            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-                <thead>
-                <tr>
-                    <th>অর্থনৈতিক কোড নং</th>
-                    <th>উপ-খাতের নাম</th>
-                    <th>জুলাই</th>
-                    <th>আগস্ট</th>
-                    <th>সেপ্টে</th>
-                    <th>অক্টো</th>
-                    <th>নভে</th>
-                    <th>ডিসে</th>
-                    <th>জানু</th>
-                    <th>ফেব্রু</th>
-                    <th>মার্চ</th>
-                    <th>এপ্রিল</th>
-                    <th>মে</th>
-                    <th>জুন</th>
-                    <th>সর্বমোট</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% records.forEach(function(row){ %>
-                    <tr>
-                        <td colspan="10">No data Found</td>
-                    </tr>
-                <% }) %>
-                </tbody>
-            </table>
-        <% } %>
+      <h1>মাসিক রাজস্ব অর্থ প্রাপ্তির হিসাব</h1>
+      <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
+      <%if (records.length >0){ %>
+      <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+        <thead>
+          <tr>
+            <th>অর্থনৈতিক কোড নং</th>
+            <th>উপ-খাতের নাম</th>
+            <th>জুলাই</th>
+            <th>আগস্ট</th>
+            <th>সেপ্টে</th>
+            <th>অক্টো</th>
+            <th>নভে</th>
+            <th>ডিসে</th>
+            <th>জানু</th>
+            <th>ফেব্রু</th>
+            <th>মার্চ</th>
+            <th>এপ্রিল</th>
+            <th>মে</th>
+            <th>জুন</th>
+            <th>সর্বমোট</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <% records.forEach(function(row){ %>
+          <tr>
+            <td><%= row.code %></td>
+            <td><%= row.upokhat %></td>
+            <td><%= row.july1 %></td>
+            <td><%= row.august1 %></td>
+            <td><%= row.sept1 %></td>
+            <td><%= row.oct1 %></td>
+            <td><%= row.nov1 %></td>
+            <td><%= row.dec1 %></td>
+            <td><%= row.jan2 %></td>
+            <td><%= row.feb2 %></td>
+            <td><%= row.march2 %></td>
+            <td><%= row.apr2 %></td>
+            <td><%= row.may2 %></td>
+            <td><%= row.june2 %></td>
+            <td><%= row.total %></td>
+
+
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+      <% }else{ %>
+      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+        <thead>
+          <tr>
+            <th>অর্থনৈতিক কোড নং</th>
+            <th>উপ-খাতের নাম</th>
+            <th>জুলাই</th>
+            <th>আগস্ট</th>
+            <th>সেপ্টে</th>
+            <th>অক্টো</th>
+            <th>নভে</th>
+            <th>ডিসে</th>
+            <th>জানু</th>
+            <th>ফেব্রু</th>
+            <th>মার্চ</th>
+            <th>এপ্রিল</th>
+            <th>মে</th>
+            <th>জুন</th>
+            <th>সর্বমোট</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% records.forEach(function(row){ %>
+          <tr>
+            <td colspan="10">No data Found</td>
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+      <% } %>
     </div>
-</div>
+  </div>
 
 </body>
+
 </html>
