--- a/views/pd/charaKolomPrice/seasonalFlower/pdfForAllCenter.ejs
+++ b/views/pd/charaKolomPrice/seasonalFlower/pdfForAllCenter.ejs
@@ -1,89 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</title>
 
-    <style>
-        .flex-container {
-            display: flex;
+  <style>
+    .flex-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 
-            justify-content: center
-        }
-        .table, td, th {
-            border: 1px solid black;
-        }
-        .table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        .center {
-            text-align: center;
-        }
-        .inline-block-child {
-            display: inline-block;
-        }
-    </style>
+    .flex-container h5 {
+      padding: 0;
+      margin: 0;
+    }
+
+    .table,
+    td,
+    th {
+      border: 1px solid black;
+    }
+
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .center {
+      text-align: center;
+    }
+
+    .inline-block-child {
+      display: inline-block;
+    }
+  </style>
 </head>
+
 <body>
 
-<div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
+  <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
-        <h1>হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</h1>
-        <p><b>সেন্টারের নাম :</b><%= centerName %></p>
-        <%if (records.length >0){ %>
-            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-            <thead>
-            <tr>
-                <th>ক্রমিক নং</th>
-                <th>আইটেমের নাম </th>
-                <th>পরিমাণ</th>
-                <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
-                <th>বেডে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
-                <th>পরিবর্তন/মুছুন</th>
-            </tr>
-            </thead>
-            <tbody>
-                <% records.forEach(function(row,index){ %>
-                    <tr>
-                        <td><%= index+1 %></td>
-                        <td><%= row.item %></td>
-                        <td><%= row.poriman %></td>
-                        <td><%= row.polycholti %></td>
-                        <td><%= row.bedcholti %></td>
-                        
-                        
-                       
-                        <td><a class="btn btn-primary btn-xs" href="/pd/seasonalFlowerEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                            <a class="btn btn-danger btn-xs" href="/pd/seasonalFlowerDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
-                        </td>
-                    </tr>
-                <% }) %>
-            </tbody>
-        </table>
-        <% }else{ %>
-            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-                <thead>
-                <tr>
-                    
-                <th>আইটেমের নাম (জাতওয়ারী)</th>
-                <th>পরিমাণ</th>
-                <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
-                <th>বেডে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% records.forEach(function(row){ %>
-                    <tr>
-                        <td colspan="10">No data Found</td>
-                    </tr>
-                <% }) %>
-                </tbody>
-            </table>
-        <% } %>
+      <h1>হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</h1>
+      <p><b>সেন্টারের নাম :</b><%= centerName %></p>
+      <%if (records.length >0){ %>
+      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+        <thead>
+          <tr>
+            <th>ক্রমিক নং</th>
+            <th>আইটেমের নাম </th>
+            <th>পরিমাণ</th>
+            <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+            <th>বেডে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+            <th>পরিবর্তন/মুছুন</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% records.forEach(function(row,index){ %>
+          <tr>
+            <td><%= index+1 %></td>
+            <td><%= row.item %></td>
+            <td><%= row.poriman %></td>
+            <td><%= row.polycholti %></td>
+            <td><%= row.bedcholti %></td>
+
+
+
+            <td><a class="btn btn-primary btn-xs" href="/pd/seasonalFlowerEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+              <a class="btn btn-danger btn-xs" href="/pd/seasonalFlowerDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+            </td>
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+      <% }else{ %>
+      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+        <thead>
+          <tr>
+
+            <th>আইটেমের নাম (জাতওয়ারী)</th>
+            <th>পরিমাণ</th>
+            <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+            <th>বেডে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% records.forEach(function(row){ %>
+          <tr>
+            <td colspan="10">No data Found</td>
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+      <% } %>
     </div>
-</div>
+  </div>
 
 </body>
+
 </html>
